7/10 マージ完了状態

--- a/.gitignore
+++ b/.gitignore
@@ -83,8 +83,7 @@ sysinfo.txt
 *.jar
 *.java
 *.js
-#*.mat
-
+# *.mat
 *.obj
 *.opendb
 *.prefs
@@ -101,3 +100,13 @@ Assets/LowlyPoly
 Assets/ithappy
 Assets/GabrielAguiarProductions
 
+UserSettings/EditorUserSettings.asset
+UserSettings/Layouts/default2022.dwlt
+Assets/Common/Materials/DeathBullet.mat.meta
+Assets/Common/Materials/GreenGrass.mat.meta
+Assets/Common/Materials/Magma.mat.meta
+Assets/Common/Materials/Stone.mat.meta
+Assets/Form0/Materials/Red.mat.meta
+Assets/FormB/Materials/GrassBody.mat.meta
+Assets/FormD/Materials/Green.mat.meta
+Assets/FormD/Materials/Orange.mat.meta
