--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,5 @@ Assets/LowlyPoly
 Assets/ithappy
 Assets/GabrielAguiarProductions
 
+UserSettings/EditorUserSettings.asset
+UserSettings/Layouts/default-2022.dwlt
