--- a/.gitignore
+++ b/.gitignore
@@ -99,4 +99,6 @@ Assets/Supercyan Character Pack Free Sample
 Assets/LowlyPoly
 Assets/ithappy
 Assets/GabrielAguiarProductions
+UserSettings/EditorUserSettings.asset
+UserSettings/Layouts/default2022.dwlt
 
